--- a/params.tex
+++ b/params.tex
@@ -1,5 +1,5 @@
-\newcommand{\MyEmail}{brisk.bell8333@tenesm.us}
-\newcommand{\MyTitle}{Senior DevOps Engineer}
+\newcommand{\MyEmail}{herodevs@tenesm.us}
+\newcommand{\MyTitle}{Senior DevOps/Platform/Site Reliability Engineer}
 \newcommand{\MyFirstName}{Nathan}
 \newcommand{\MyLastName}{Douglas}
 \newcommand{\MyFullName}{Nathan Douglas}
