--- a/resume.tex
+++ b/resume.tex
@@ -231,7 +231,7 @@
         \resumeItemListEnd
 
     \resumeProjectHeading
-      {\textbf{Business Jet Traveler} $|$ \emph{Drupal, PHP, Node.js, Ansible, Terraform, GitHub Actions}}{Jan. 2018 – Dec. 2018}
+      {\textbf{Business Jet Traveler} $|$ \emph{Drupal, PHP, CloudFormation}}{Jan. 2018 – Dec. 2018}
         \resumeItemListStart
           \resumeItem{Designed and implemented data model for aircraft directory}
           \resumeItem{Wrote a map-based tool to visualize aircraft specifications}
